--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "from sklearn.base import BaseEstimator, RegressorMixin\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# Appliquer PCA pour réduire la dimensionnalité\n",
-    "pca = PCA(n_components=0.95)\n",
+    "pca = PCA(n_components=118)\n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
     "\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +153,9 @@
     "        self.fc3 = nn.Linear(fc2_out_features, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.silu(self.fc1(x))\n",
     "        x = self.dropout1(x)\n",
-    "        x = F.relu(self.fc2(x))\n",
+    "        x = F.silu(self.fc2(x))\n",
     "        x = self.dropout2(x)\n",
     "        x = self.fc3(x)\n",
     "        return x\n",
@@ -186,8 +187,12 @@
     "        best_loss = float('inf')\n",
     "        patience_counter = 0\n",
     "        \n",
+    "        train_losses = []\n",
+    "        val_losses = []\n",
+    "        \n",
     "        for epoch in range(self.max_epochs):\n",
     "            self.model.train()\n",
+    "            epoch_loss = 0\n",
     "            for X_batch, y_batch in train_loader:\n",
     "                optimizer.zero_grad()\n",
     "                outputs = self.model(X_batch)\n",
@@ -198,12 +203,18 @@
     "                loss = loss + self.l2_lambda * l2_reg\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
+    "                \n",
+    "                epoch_loss += loss.item()\n",
+    "                \n",
+    "            epoch_loss /= len(train_loader)\n",
+    "            train_losses.append(epoch_loss)\n",
     "            \n",
     "            # Validation\n",
     "            self.model.eval()\n",
     "            with torch.no_grad():\n",
     "                val_outputs = self.model(X_valid_tensor)\n",
     "                val_loss = self.criterion(val_outputs, y_valid_tensor)\n",
+    "                val_losses.append(val_loss)\n",
     "                \n",
     "                if val_loss < best_loss:\n",
     "                    best_loss = val_loss\n",
@@ -215,8 +226,7 @@
     "                if patience_counter >= self.patience:\n",
     "                    print(f\"Early stopping at epoch {epoch}\")\n",
     "                    break\n",
-    "        mse, t_score_test, t_score_train = self.evaluate(X_train_tensor, y_train_tensor, X_valid_tensor, y_valid_tensor)\n",
-    "        print(f\"Final Evaluation after training: MSE={mse}, t_score_test={t_score_test}, t_score_train={t_score_train}\")\n",
+    "                \n",
     "            \n",
     "    def predict(self, X):\n",
     "        # Prédiction avec le modèle entraîné\n",
@@ -238,7 +248,6 @@
     "\n",
     "        # Calculer la MSE\n",
     "        mse = torch.mean((predictions_tensor - y_valid_tensor)**2).item()\n",
-    "        print(\"MSE:\", mse)\n",
     "\n",
     "        # Calculer le t-score (la proportion des prédictions proches des vraies valeurs)\n",
     "        t_score_test = torch.mean((torch.abs(predictions_tensor - y_valid_tensor) <= 5).float()).item()\n",
@@ -246,6 +255,18 @@
     "\n",
     "        print(\"t_score test:\", t_score_test)\n",
     "        print(\"t_score train:\", t_score_train)\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.plot(train_losses, label='Training Loss')\n",
+    "        plt.plot(val_losses, label='Validation Loss')\n",
+    "        plt.xlabel('Epoch')\n",
+    "        plt.ylabel('Loss')\n",
+    "        plt.title('Loss vs Epoch')\n",
+    "        plt.legend()\n",
+    "        plt.show()\n",
+    "        \n",
+    "        \"\"\"\n",
     "\n",
     "        return mse, t_score_test, t_score_train\n",
     "    \n",
@@ -256,7 +277,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\elvua\\AppData\\Local\\Temp\\ipykernel_2468\\1552978330.py:98: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32).clone().detach()\n",
+      "C:\\Users\\elvua\\AppData\\Local\\Temp\\ipykernel_2468\\1552978330.py:98: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32).clone().detach()\n",
+      "C:\\Users\\elvua\\AppData\\Local\\Temp\\ipykernel_2468\\1552978330.py:98: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32).clone().detach()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Early stopping at epoch 116\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\elvua\\AppData\\Local\\Temp\\ipykernel_2468\\1552978330.py:98: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32).clone().detach()\n",
+      "C:\\Users\\elvua\\AppData\\Local\\Temp\\ipykernel_2468\\1552978330.py:98: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32).clone().detach()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_score test: 0.36153846979141235\n",
+      "t_score train: 0.3817307651042938\n",
+      "MSE: 205.24049377441406 t_score_test: 0.36153846979141235 t_score_train: 0.3817307651042938\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nprint(\"Best MSE: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\\ncriterion = nn.MSELoss()\\nbatch_size = grid_result.best_params_[\"batch\"]\\nbatches_per_epoch = len(X_train_tensor) // batch_size\\n'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_size = X_train_tensor.shape[1]\n",
     "net = NeuralNetRegressor(input_size=input_size)\n",
@@ -264,9 +334,9 @@
     "# Définir les paramètres pour GridSearch\n",
     "params = {\n",
     "    'eta': [0.01],\n",
-    "    'max_epochs': [150],\n",
-    "    'fc1_out_features': [32, 64],\n",
-    "    'fc2_out_features': [64, 128],\n",
+    "    'max_epochs': [140],\n",
+    "    'fc1_out_features': [32],\n",
+    "    'fc2_out_features': [64],\n",
     "    'batch': [45],\n",
     "    'dropout_rate': [0.5]\n",
     "}\n",
@@ -280,9 +350,9 @@
     "\n",
     "# Maintenant, tu peux appeler evaluate() pour afficher les résultats\n",
     "mse, t_score_test, t_score_train = nouveau_model.evaluate(X_train_tensor, y_train_tensor, X_valid_tensor, y_valid_tensor)\n",
+    "print('MSE:', mse, 't_score_test:', t_score_test, 't_score_train:', t_score_train)  \n",
     "\n",
     "# Affichage des résultats finaux après l'entraînement\n",
-    "print(f\"Final Evaluation: MSE={mse}, t_score_test={t_score_test}, t_score_train={t_score_train}\")\n",
     "\n",
     "\"\"\"\n",
     "print(\"Best MSE: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
