--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,9 @@
     "import pandas as pd\n",
     "from sklearn.base import BaseEstimator, RegressorMixin\n",
     "from sklearn.decomposition import PCA\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from scipy.stats import uniform, randint, loguniform"
    ]
   },
   {
