--- a/Rendu_final.ipynb
+++ b/Rendu_final.ipynb
@@ -28,22 +28,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Linear Model**"
+    "**Preprocessing**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# retrieve the data\n",
+    "**Linear Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve the data\n",
     "data = pd.read_csv(\"./train.csv\")\n",
     "subspures = pd.read_csv(\"./substances.csv\")\n",
     "pure_heroin = subspures[(subspures['substance'] == 'heroin (white)') | (subspures[\"substance\"]==\"heroin (brown)\")]\n",
     "\n",
-    "\n",
+    "# Create new features\n",
     "distances = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:, 1:].to_numpy(), metric = 'euclidean')\n",
     "dist_her = pd.DataFrame(distances, index = data.iloc[:,6:].index, columns=pure_heroin.iloc[:,1:].index)\n",
-    "\n",
     "data_new_features2 = data.iloc[:, 6:].values.dot(subspures.iloc[:,1:].values.T)\n",
     "\n",
     "\n",
@@ -136,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
