--- a/Rendu_final.ipynb
+++ b/Rendu_final.ipynb
@@ -28,7 +28,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Visualisation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Preprocessing**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve the data\n",
+    "data = pd.read_csv(\"./train.csv\")\n",
+    "subspures = pd.read_csv(\"./substances.csv\")\n",
+    "pure_heroin = subspures[(subspures['substance'] == 'heroin (white)') | (subspures[\"substance\"]==\"heroin (brown)\")]\n",
+    "\n",
+    "# Create new features by multiplying the data with the pure heroin\n",
+    "distances = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:, 1:].to_numpy(), metric = 'euclidean')\n",
+    "dist_her = pd.DataFrame(distances, index = data.iloc[:,6:].index, columns=pure_heroin.iloc[:,1:].index)\n",
+    "data_new_features2 = data.iloc[:, 6:].values.dot(subspures.iloc[:,1:].values.T)\n",
+    "\n",
+    "# Split the data\n",
+    "X = data_new_features2\n",
+    "y = data['PURITY']\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.15, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Non-linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Retrieve the data\n",
+    "data_train = pd.read_csv(\"./train.csv\")\n",
+    "data_test = pd.read_csv(\"./test.csv\")\n",
+    "X_train = data_train.iloc[:, 6:]\n",
+    "X_test = data_test.iloc[:, 5:]\n",
+    "\n",
+    "y = data_train[\"PURITY\"]/100\n",
+    "\n",
+    "# Standardize the data\n",
+    "standardizer = StandardScaler()\n",
+    "X_st = standardizer.fit_transform(X_train)\n",
+    "\n",
+    "# Perform PCA \n",
+    "pca = PCA(16)\n",
+    "pca.fit(X_st)\n",
+    "X_pca = pca.transform(X_st)\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_pca, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Convert to tensors\n",
+    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32).reshape(-1, 1)\n",
+    "X_valid_tensor = torch.tensor(X_valid, dtype=torch.float32)\n",
+    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1)\n",
+    "\n",
+    "# Standardize and perform PCA on the test data\n",
+    "X_st = standardizer.transform(X_test)\n",
+    "X_pca = pca.transform(X_st)\n",
+    "X_test_tensor = torch.tensor(X_pca, dtype=torch.float32)"
    ]
   },
   {
@@ -44,23 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve the data\n",
-    "data = pd.read_csv(\"./train.csv\")\n",
-    "subspures = pd.read_csv(\"./substances.csv\")\n",
-    "pure_heroin = subspures[(subspures['substance'] == 'heroin (white)') | (subspures[\"substance\"]==\"heroin (brown)\")]\n",
-    "\n",
-    "# Create new features\n",
-    "distances = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:, 1:].to_numpy(), metric = 'euclidean')\n",
-    "dist_her = pd.DataFrame(distances, index = data.iloc[:,6:].index, columns=pure_heroin.iloc[:,1:].index)\n",
-    "data_new_features2 = data.iloc[:, 6:].values.dot(subspures.iloc[:,1:].values.T)\n",
-    "\n",
-    "\n",
-    "X = data_new_features2\n",
-    "y = data['PURITY']\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.15, random_state=42)\n",
-    "\n",
-    "\n",
-    "model = Ridge() #ridge regressors model\n",
+    "model = Ridge() #ridge regressor model\n",
     "param_grid = {'alpha': np.logspace(-7, 0, 100)} #hyperparamater alpha\n",
     "\n",
     "\n",
@@ -68,14 +133,13 @@
     "grid_search.fit(X, y)\n",
     "\n",
     "\n",
-    "mach1 = grid_search.best_estimator_ #best model\n",
-    "mach1.fit(X_train, y_train) #apply the best model to the data\n",
+    "mach1 = grid_search.best_estimator_ #find the best model\n",
+    "mach1.fit(X_train, y_train) \n",
     "predictions = mach1.predict(X_valid)\n",
     "\n",
-    "\n",
+    "#Plot the RMSE as a function of lambda\n",
     "plt.figure()\n",
-    "plt.scatter(np.logspace(-7, 0, 100),        \n",
-    "            np.sqrt(-grid_search.cv_results_['mean_test_score']))\n",
+    "plt.scatter(np.logspace(-7, 0, 100), np.sqrt(-grid_search.cv_results_['mean_test_score']))\n",
     "plt.xlabel(\"lambda\")\n",
     "plt.ylabel(\"RMSE\")\n",
     "plt.xscale(\"log\")\n",
@@ -103,36 +167,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train = pd.read_csv(\"./train.csv\")\n",
-    "data_test = pd.read_csv(\"./test.csv\")\n",
-    "X_train = data_train.iloc[:, 6:]\n",
-    "X_test = data_test.iloc[:, 5:]\n",
-    "\n",
-    "y = data_train[\"PURITY\"]/100\n",
-    "\n",
-    "pca = PCA(n_components=16)\n",
-    "X_pca = pd.DataFrame(pca.fit_transform(X_train))\n",
-    "print(pca.explained_variance_ratio_) # to find the number of components to keep\n",
-    "X_new = pd.concat([X_train, X_pca], axis=1)\n",
-    "X_new.columns = X_new.columns.astype(str)\n",
-    "standardizer = StandardScaler()\n",
-    "X_st = standardizer.fit_transform(X_new)\n",
-    "\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_st, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Convert to tensors\n",
-    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
-    "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32).reshape(-1, 1)\n",
-    "X_valid_tensor = torch.tensor(X_valid, dtype=torch.float32)\n",
-    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1)\n",
-    "\n",
-    "X_pca = pd.DataFrame(pca.transform(X_test))\n",
-    "X_new = pd.concat([X_test, X_pca], axis=1)\n",
-    "X_new.columns = X_new.columns.astype(str)\n",
-    "\n",
-    "X_st = standardizer.transform(X_new)\n",
-    "X_test_tensor = torch.tensor(X_st, dtype=torch.float32)\n",
-    "\n",
     "# Define the FeedForwardNN class\n",
     "class FeedForwardNN(nn.Module):\n",
     "\n",
