--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best MSE: -0.001218 using {'activation': 0, 'batch': 67, 'eta': 0.006088155292599357, 'lin_layer_dropouts': [0.06669548209299414, 0.12029480998267439], 'lin_layer_sizes': [96], 'max_epochs': 125}\n"
+      "Best MSE: -0.024975 using {'activation': 0, 'batch': 67, 'eta': 0.006088155292599357, 'lin_layer_dropouts': [0.06669548209299414, 0.12029480998267439], 'lin_layer_sizes': [96], 'max_epochs': 125}\n"
      ]
     }
    ],
@@ -579,7 +579,7 @@
     "}\n",
     "\n",
     "# Initialiser RandomizedSearchCV\n",
-    "random_search = RandomizedSearchCV(net, params_dist, refit=True, cv=5, random_state=43, scoring='neg_mean_squared_error', verbose=0)\n",
+    "random_search = RandomizedSearchCV(net, params_dist, refit=True, cv=5, random_state=43, scoring='neg_mean_absolute_error', verbose=0)\n",
     "\n",
     "# Entraîner le modèle avec GridSearch\n",
     "random_grid_result = random_search.fit(X_train_tensor, y_train_tensor)\n",
@@ -590,9 +590,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_pred contains NaN: False\n",
+      "MSE : 11.795471254623127\n",
+      "t_score test : 0.9836538461538461\n",
+      "t_score train : 0.9692307692307692\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -602,23 +612,12 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_pred contains NaN: False\n",
-      "MSE : 11.795471254623127\n",
-      "Loss : 0.0020581289616872058\n",
-      "t_score test : 0.9836538461538461\n",
-      "t_score train : 0.9692307692307692\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "\"\\n# Afficher la courbe d'apprentissage\\nimport matplotlib.pyplot as plt\\nplt.plot(steps, learning_curve)\\nplt.xlabel('Steps')\\nplt.ylabel('Loss')\\nplt.title('Learning Curve')\\nplt.show()\\n\""
       ]
      },
-     "execution_count": 116,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
