--- a/Rendu_final.ipynb
+++ b/Rendu_final.ipynb
@@ -109,7 +109,7 @@
     "# Standardize and perform PCA on the test data\n",
     "X_st = standardizer.transform(X_test)\n",
     "X_pca = pca.transform(X_st)\n",
-    "X_test_tensor = torch.tensor(X_pca, dtype=torch.float32)"
+    "X_test_tensor = torch.tensor(X_pca, dtype=torch.float32)\n"
    ]
   },
   {
