--- a/main_exploration.ipynb
+++ b/main_exploration.ipynb
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
     "print(f\"Nombre de composantes principales nécessaires pour expliquer 90 % de la variance : {n_components}\")\n",
     "\n",
     "# Réduire les données avec le bon nombre de composantes\n",
-    "reduced_data = PCA(n_components=n_components).fit_transform(data.iloc[:, 6:])\n",
+    "reduced_data = PCA(n_components=n_components).fit_transform(data_new_features3)\n",
     "\n",
     "# Étape 4 : Visualiser les résultats (optionnel)\n",
     "import matplotlib.pyplot as plt\n",
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
