--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -23,70 +23,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"./train.csv\")\n",
-    "X = data.iloc[:, 6:]\n",
+    "data_train = pd.read_csv(\"./train.csv\")\n",
+    "data_test = pd.read_csv(\"./test.csv\")\n",
+    "X_train = data_train.iloc[:, 6:]\n",
+    "X_test = data_test.iloc[:, 5:]\n",
+    "\n",
+    "data = pd.concat([data_train, data_test], axis=0)\n",
+    "\n",
     "classifiers = data.iloc[:, 1:4]\n",
     "enc = OneHotEncoder()\n",
     "data_oh = enc.fit_transform(classifiers).toarray()\n",
-    "data_oh = pd.DataFrame(data_oh)\n"
+    "data_oh = pd.DataFrame(data_oh)\n",
+    "\n",
+    "# Nombre de lignes dans data_train\n",
+    "n_train = len(data_train)\n",
+    "\n",
+    "# Séparer data en data_train et data_test\n",
+    "data_train_oh = data_oh.iloc[:n_train, :].reset_index(drop=True)\n",
+    "data_test_oh = data_oh.iloc[n_train:, :].reset_index(drop=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       0.585000\n",
-      "1       0.186000\n",
-      "2       0.198817\n",
-      "3       0.525000\n",
-      "4       0.489000\n",
-      "          ...   \n",
-      "1295    0.101000\n",
-      "1296    0.449000\n",
-      "1297    0.534000\n",
-      "1298    0.136000\n",
-      "1299    0.196000\n",
-      "Name: PURITY, Length: 1300, dtype: float64\n",
-      "[8.63385983e-01 1.19426741e-01 1.42997513e-02 1.98910919e-03\n",
-      " 4.96149909e-04 1.60475196e-04 9.86566323e-05 4.91435637e-05\n",
-      " 3.35702776e-05 1.86516555e-05 1.37499171e-05 8.14845972e-06\n",
-      " 4.42312642e-06 3.64445868e-06 2.58705888e-06 2.06030889e-06]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#spectrum_filtered = pd.DataFrame(savgol_filter(spectrum, 7, 3, deriv = 2, axis = 0))\n",
     "#spectrum_filtered_st = zscore(spectrum_filtered, axis = 1)\n",
     "\n",
-    "y = data[\"PURITY\"]/100\n",
-    "print(y)\n",
+    "y = data_train[\"PURITY\"]/100\n",
     "\n",
+    "seed = 42\n",
     "pca = PCA(n_components=16)\n",
-    "X_pca = pd.DataFrame(pca.fit_transform(X))\n",
-    "print(pca.explained_variance_ratio_) #pour trouver le nombre de composantes à garder\n",
-    "X_new = pd.concat([data_oh, X_pca], axis=1)\n",
-    "X_new.columns = X_new.columns.astype(str)\n",
     "\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_new, y, test_size=0.2, random_state=42)\n",
+    "X_new = pd.concat([data_train_oh, X_train], axis=1)\n",
+    "X_new.columns = X_new.columns.astype(str)\n",
+    "X_pca = pd.DataFrame(pca.fit_transform(X_new))\n",
+    "#print(pca.explained_variance_ratio_) #pour trouver le nombre de composantes à garder\n",
+    "\n",
+    "\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_pca, y, test_size=0.2, random_state=seed)\n",
     "\n",
     "standardizer = StandardScaler()\n",
     "X_train_standardized = standardizer.fit_transform(X_train)\n",
     "X_valid_standardized = standardizer.transform(X_valid)\n",
     "\n",
     "# Convert to tensors\n",
-    "X_train_tensor = torch.tensor(X_train_standardized, dtype=torch.float32)\n",
-    "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32).reshape(-1, 1)\n",
-    "X_valid_tensor = torch.tensor(X_valid_standardized, dtype=torch.float32)\n",
-    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1)"
+    "X_train_tensor = torch.tensor(X_train_standardized, dtype=torch.float32).clone().detach()\n",
+    "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32).reshape(-1, 1).clone().detach()\n",
+    "X_valid_tensor = torch.tensor(X_valid_standardized, dtype=torch.float32).clone().detach()\n",
+    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1).clone().detach()"
    ]
   },
   {
@@ -624,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
