--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +39,9 @@
     "X_train = data_train.iloc[:, 6:]\n",
     "X_test = data_test.iloc[:, 5:]\n",
     "\n",
-    "#data = pd.concat([data_train, data_test], axis=0)\n",
     "\n",
-    "'''\n",
-    "classifiers = data.iloc[:, 1:4]\n",
-    "enc = OneHotEncoder()\n",
-    "data_oh = enc.fit_transform(classifiers).toarray()\n",
-    "data_oh = pd.DataFrame(data_oh)\n",
-    "# Nombre de lignes dans data_train\n",
-    "n_train = len(data_train)\n",
-    "\n",
-    "# Séparer data en data_train et data_test\n",
-    "data_train_oh = data_oh.iloc[:n_train, :].reset_index(drop=True)\n",
-    "data_test_oh = data_oh.iloc[n_train:, :].reset_index(drop=True)\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "classifiers_train = data_train.iloc[:, 1:4]\n",
-    "enc = OneHotEncoder(sparse=False) \n",
+    "enc = OneHotEncoder(sparse_output=False,handle_unknown='ignore') \n",
     "data_train_oh = enc.fit_transform(classifiers_train)\n",
     "\n",
     "# Appliquer la même transformation sur data_test avec le même modèle\n",
@@ -68,61 +54,51 @@
     "\n",
     "# Concaténer One-Hot avec les autres caractéristiques (X_train, X_test)\n",
     "X_new_train = pd.concat([data_train_oh, X_train], axis=1)\n",
-    "X_new_test = pd.concat([data_test_oh, X_test], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#spectrum_filtered = pd.DataFrame(savgol_filter(spectrum, 7, 3, deriv = 2, axis = 0))\n",
-    "#spectrum_filtered_st = zscore(spectrum_filtered, axis = 1)\n",
+    "X_new_test = pd.concat([data_test_oh, X_test], axis=1)\n",
     "\n",
     "y = data_train[\"PURITY\"]/100\n",
     "\n",
     "seed = 42\n",
-    "pca = PCA(n_components=16)\n",
-    "\n",
-    "#X_new_train = pd.concat([data_train_oh, X_train], axis=1)\n",
     "\n",
     "X_new_train.columns = X_new_train.columns.astype(str)\n",
-    "X_pca = pd.DataFrame(pca.fit_transform(X_new_train))\n",
+    "X_new_test.columns = X_new_test.columns.astype(str)\n",
+    "\n",
     "#print(pca.explained_variance_ratio_) #pour trouver le nombre de composantes à garder\n",
     "\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_pca, y, test_size=0.3, random_state=seed)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_new_train, y, test_size=0.2, random_state=seed)\n",
     "\n",
-    "standardizer = StandardScaler()\n",
-    "X_train_standardized = standardizer.fit_transform(X_train)\n",
-    "X_valid_standardized = standardizer.transform(X_valid)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_standardized = scaler.fit_transform(X_train)\n",
+    "pca = PCA(n_components=0.95) \n",
+    "X_train_pca = pca.fit_transform(X_train_standardized)\n",
+    "\n",
+    "# standardization and PCA of X_valid\n",
+    "X_valid_standardized = scaler.transform(X_valid)\n",
+    "X_valid_pca = pca.transform(X_valid_standardized)\n",
+    "\n",
+    "# standardization and PCA of X_valid\n",
+    "X_test_standardized = scaler.transform(X_new_test)\n",
+    "X_test_pca = pca.transform(X_test_standardized)\n",
     "\n",
     "# Convert to tensors\n",
     "X_train_tensor = torch.tensor(X_train_standardized, dtype=torch.float32).clone().detach()\n",
     "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32).reshape(-1, 1).clone().detach()\n",
     "X_valid_tensor = torch.tensor(X_valid_standardized, dtype=torch.float32).clone().detach()\n",
-    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1).clone().detach()"
+    "y_valid_tensor = torch.tensor(y_valid.values, dtype=torch.float32).reshape(-1, 1).clone().detach()\n",
+    "\n",
+    "X_test_tensor = torch.tensor(X_test_pca, dtype=torch.float32).clone().detach()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#X_new_test = pd.concat([data_test_oh, X_test], axis=1)\n",
-    "\n",
-    "X_new_test.columns = X_new_test.columns.astype(str)\n",
-    "X_pca = pca.transform(X_new_test)\n",
-    "X_st = standardizer.transform(X_pca)\n",
-    "\n",
-    "\n",
-    "X_test_tensor = torch.tensor(X_pca, dtype=torch.float32)"
+    "## Neuron class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RandomSearch"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best MSE: -0.042540 using {'activation': 2, 'batch': 42, 'eta': 0.002386418878005608, 'lin_layer_dropouts': [0.38984550013638464, 0.2984250789732435, 0.22291637642679557], 'lin_layer_sizes': [83, 124, 46], 'max_epochs': 135}\n"
+      "Best MSE: -0.039878 using {'activation': 2, 'batch': 48, 'eta': 0.002386418878005608, 'lin_layer_dropouts': [0.38984550013638464, 0.2984250789732435, 0.22291637642679557], 'lin_layer_sizes': [83, 124, 46], 'max_epochs': 150}\n"
      ]
     }
    ],
@@ -559,8 +542,8 @@
     "# Définir les paramètres pour GridSearch\n",
     "params_dist = {\n",
     "    'eta': loguniform(1e-4, 1e-1),\n",
-    "    'max_epochs': randint(100, 150),\n",
-    "    'batch': randint(32, 70),\n",
+    "    'max_epochs': randint(130, 160),\n",
+    "    'batch': randint(38, 50),\n",
     "    'lin_layer_sizes': [[randint.rvs(32, 128) for _ in range(randint.rvs(1, 4))]],  # Taille de 1 à 4 couches, entre 32 et 128 neurones par couche\n",
     "    'lin_layer_dropouts': [[uniform.rvs(0, 0.5) for _ in range(randint.rvs(1, 4))]],  # Dropout entre 0 et 0.5 pour chaque couche\n",
     "    'activation': randint(0, 4),\n",
@@ -577,8 +560,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prédictions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -586,8 +576,8 @@
      "output_type": "stream",
      "text": [
       "y_pred contains NaN: False\n",
-      "t_score test : 0.8670329670329671\n",
-      "t_score train : 0.8179487179487179\n"
+      "t_score test : 0.9259615384615385\n",
+      "t_score train : 0.9076923076923077\n"
      ]
     },
     {
@@ -604,7 +594,7 @@
        "\"\\n# Afficher la courbe d'apprentissage\\nimport matplotlib.pyplot as plt\\nplt.plot(steps, learning_curve)\\nplt.xlabel('Steps')\\nplt.ylabel('Loss')\\nplt.title('Learning Curve')\\nplt.show()\\n\""
       ]
      },
-     "execution_count": 77,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
