--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x00000159F31B2DD0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\elvua\\miniconda3\\envs\\MLCourse\\lib\\site-packages\\ipykernel\\ipkernel.py\", line 788, in _clean_thread_parent_frames\n",
+      "    if phase != \"start\":\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +207,8 @@
     "        self.criterion = nn.L1Loss()\n",
     "    \n",
     "    def fit(self, X, y, do_print=False):\n",
-    "        optimizer = optim.Adam(self.model.parameters(), lr=self.eta, weight_decay=1e-4)\n",
+    "        #optimizer = optim.Adam(self.model.parameters(), lr=self.eta, weight_decay=1e-4)\n",
+    "        optimizer = torch.optim.SGD(self.parameters(), lr=self.eta, momentum=0.9, weight_decay=1e-4)\n",
     "\n",
     "        X_tensor = torch.tensor(X).clone().detach().float()\n",
     "        y_tensor = torch.tensor(y).clone().detach().float()\n",
@@ -222,7 +235,7 @@
     "                    epoch_loss += loss.item()\n",
     "                if do_print:\n",
     "                    print(f\"Epoch {epoch+1}/{self.max_epochs}, Loss: {epoch_loss / len(dataloader)}\")\n",
-    "            print(prof.key_averages().table(sort_by=\"cuda_time_total\" if torch.cuda.is_available() else \"cpu_time_total\", row_limit=10))\n",
+    "        \n",
     "        return self\n",
     "    \n",
     "    def predict(self, X):\n",
@@ -259,8 +272,8 @@
     "# Définir les paramètres pour GridSearch\n",
     "params_dist = {\n",
     "    'eta': loguniform(1e-4, 1e-1),\n",
-    "    'max_epochs': randint(130, 160),\n",
-    "    'batch': randint(38, 50),\n",
+    "    'max_epochs': randint(50, 150),\n",
+    "    'batch': randint(38, 70),\n",
     "    'lin_layer_sizes': [[randint.rvs(32, 128) for _ in range(randint.rvs(1, 4))]],  # Taille de 1 à 4 couches, entre 32 et 128 neurones par couche\n",
     "    'lin_layer_dropouts': [[uniform.rvs(0, 0.5) for _ in range(randint.rvs(1, 4))]],  # Dropout entre 0 et 0.5 pour chaque couche\n",
     "    'activation': randint(0, 4),\n",
